v0.0.4/_sources/generated/gallery/13-fast-spin-echo/fse3D_shuffling.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "generated/gallery/13-fast-spin-echo/fse3D_shuffling.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_generated_gallery_13-fast-spin-echo_fse3D_shuffling.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_generated_gallery_13-fast-spin-echo_fse3D_shuffling.py:


=============================
Shuffled echo-resolved 3D FSE
=============================

Shuffled 3D FSE uses the same optimized refocusing train as conventional FSE,
but distributes echo times over a variable-density Poisson-disc sampling
pattern. The resulting incoherent contrast distribution can support
echo-resolved or subspace reconstruction; no reconstruction is performed
here.

.. GENERATED FROM PYTHON SOURCE LINES 12-51

.. code-block:: Python


    from pypulseqpp import sequences

    Fse3DApp = sequences.fse3D_sequence.Fse3DApp

    P = {
        "n_x": 80,
        "n_y": 48,
        "n_z": 24,
        "fov_x": 0.20,
        "fov_y": 0.20,
        "fov_z": 0.12,
        "etl": 16,
        "te": 48e-3,
        "tr": 0.5,
        "ry": 2,
        "rz": 2,
        "n_acs_y": 8,
        "n_acs_z": 6,
        "n_dummy": 0,
        "ordering": "shuffling",
        "flip_modulation": "optimized",
        "wave_amplitude": 0.0,
    }
    app = Fse3DApp(**P)
    seq = app.design()








.. GENERATED FROM PYTHON SOURCE LINES 52-58

Variable-density sampling
-------------------------

A fully sampled calibration region is embedded in a variable-density
Poisson-disc mask. The remaining samples are distributed across echo indices
rather than assigned deterministically by k-space radius.

.. GENERATED FROM PYTHON SOURCE LINES 58-78




.. image-sg:: /generated/gallery/13-fast-spin-echo/images/sphx_glr_fse3D_shuffling_001.png
   :alt: Sampled views, Echo-time distribution
   :srcset: /generated/gallery/13-fast-spin-echo/images/sphx_glr_fse3D_shuffling_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 79-87

Echo-time distribution
----------------------

The optimized train is the same type analysed in the conventional FSE example;
shuffling changes its assignment to sampled views, not the RF model. Each echo
index occurs throughout the sampled extent. Contrast evolution is
consequently not locked to a radial k-space band, which is the sampling
condition used by echo-resolved and subspace FSE reconstructions.

.. GENERATED FROM PYTHON SOURCE LINES 87-102




.. image-sg:: /generated/gallery/13-fast-spin-echo/images/sphx_glr_fse3D_shuffling_002.png
   :alt: fse3D shuffling
   :srcset: /generated/gallery/13-fast-spin-echo/images/sphx_glr_fse3D_shuffling_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.429 seconds)


.. _sphx_glr_download_generated_gallery_13-fast-spin-echo_fse3D_shuffling.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: fse3D_shuffling.ipynb <fse3D_shuffling.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: fse3D_shuffling.py <fse3D_shuffling.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: fse3D_shuffling.zip <fse3D_shuffling.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
