v0.0.5/_sources/generated/gallery/13-fast-spin-echo/fse3D_shuffling.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "generated/gallery/13-fast-spin-echo/fse3D_shuffling.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_generated_gallery_13-fast-spin-echo_fse3D_shuffling.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_generated_gallery_13-fast-spin-echo_fse3D_shuffling.py:


=============================
Shuffled echo-resolved 3D FSE
=============================

Shuffled 3D FSE uses the same refocusing-train design as conventional FSE
and differs in two separate choices. The support is a variable-density
Poisson-disc draw, which determines which views are acquired. The ordering
is that of T2 Shuffling [TAM17]_: each train is a group of contiguous views in
raster order, and the echo position of each view within its train is random,
which determines when each view is acquired. Together, the variable-density
support and the random echo positions give each echo time a subset of views
spread over the sampled extent without a regular pattern, the sampling
condition of echo-resolved subspace reconstruction [TAM17]_; no
reconstruction is performed here.

.. GENERATED FROM PYTHON SOURCE LINES 17-62

.. code-block:: Python


    from pypulseqpp import sequences

    Fse3DApp = sequences.fse3D_sequence.Fse3DApp

    P = {
        "n_x": 128,
        "n_y": 96,
        "n_z": 48,
        "fov_x": 0.20,
        "fov_y": 0.20,
        "fov_z": 0.12,
        "etl": 64,
        "te": 100e-3,
        "tr": 1.4,
        "ry": 2,
        "rz": 2,
        "n_acs_y": 8,
        "n_acs_z": 6,
        "n_dummy": 0,
        "ordering": "shuffling",
        "flip_modulation": "optimized",
        "wave_amplitude": 0.0,
    }
    app = Fse3DApp(**P)
    seq = app.design()








.. GENERATED FROM PYTHON SOURCE LINES 63-71

Variable-density sampling
-------------------------

A fully sampled calibration region is embedded in a variable-density
Poisson-disc support, selected with
``make_cartesian_plane_sampling(..., sampling="poisson")``. The echo index of
each view is then assigned by :func:`~pypulseqpp.make_shuffling_order` rather
than by its distance from the k-space centre.

.. GENERATED FROM PYTHON SOURCE LINES 71-92




.. image-sg:: /generated/gallery/13-fast-spin-echo/images/sphx_glr_fse3D_shuffling_001.png
   :alt: Sampled views, Echo-time distribution
   :srcset: /generated/gallery/13-fast-spin-echo/images/sphx_glr_fse3D_shuffling_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 93-104

Echo-time distribution
----------------------

The refocusing train is designed as in
:doc:`/generated/gallery/13-fast-spin-echo/fse3D_sequence`, whose figures
show the schedule; shuffling changes the assignment of views to echoes, not
the refocusing schedule. With a 64-echo train, each echo index occurs
throughout the sampled extent, so the contrast evolution along the train is
not confined to a radial k-space band. The figure gives the distance of
every acquired view from the k-space centre against its echo time: every
echo time samples views from the centre to the edge of the support.

.. GENERATED FROM PYTHON SOURCE LINES 104-117




.. image-sg:: /generated/gallery/13-fast-spin-echo/images/sphx_glr_fse3D_shuffling_002.png
   :alt: fse3D shuffling
   :srcset: /generated/gallery/13-fast-spin-echo/images/sphx_glr_fse3D_shuffling_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 118-125

References
----------

.. [TAM17] Tamir JI, Uecker M, Chen W, Lai P, Alley MT, Vasanawala SS,
   Lustig M. T2 shuffling: sharp, multicontrast, volumetric fast spin-echo
   imaging. *Magnetic Resonance in Medicine*. 2017;77(1):180-195.
   https://doi.org/10.1002/mrm.26102


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.661 seconds)


.. _sphx_glr_download_generated_gallery_13-fast-spin-echo_fse3D_shuffling.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: fse3D_shuffling.ipynb <fse3D_shuffling.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: fse3D_shuffling.py <fse3D_shuffling.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: fse3D_shuffling.zip <fse3D_shuffling.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
